fix: review修复-批量SQL替代N+1+原子incrementNoShow+防重复标记